# chibi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  mingw-w64-x86_64.cmake
.github/workflows/: cmake-single-platform.yml
