cmake_minimum_required(VERSION 3.30)
project(chibi C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
if(STATIC_PROJECT)
    set(SDL_STATIC ON)
    set(SDL_TEST OFF)
    set(BUILD_SHARED_LIBS OFF)
    add_subdirectory(vendor)
endif ()
add_executable(chibi main.c)
if(STATIC_PROJECT)
    target_link_libraries(chibi PRIVATE vendor)
else ()
    target_link_libraries(chibi PRIVATE SDL3)
    target_link_libraries(chibi PRIVATE SDL3_image)
endif ()