cmake_minimum_required(VERSION 3.30)
project(dahlia C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(MYGAME_VENDORED "Use vendored libraries" OFF)
if(MYGAME_VENDORED)
    set(SDL_STATIC ON)
    set(SDL_TEST OFF)
    set(BUILD_SHARED_LIBS OFF)
    add_subdirectory(vendor)
endif ()
add_executable(dahlia main.c)
if(MYGAME_VENDORED)
        target_link_libraries(dahlia PRIVATE vendor)
else ()
    target_link_libraries(dahlia PRIVATE SDL3)
    target_link_libraries(dahlia PRIVATE SDL3_image)
endif ()
