cmake_minimum_required(VERSION 3.30)
project(dahlia C)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(MYGAME_VENDORED "Use vendored libraries" OFF)
if (MYGAME_VENDORED)
    add_subdirectory(vendor/SDL)
    add_subdirectory(vendor/SDL_image)
else()
    find_package(SDL3)
    find_package(SDL3_image)
endif ()
add_executable(dahlia main.c)
target_link_libraries(dahlia PRIVATE SDL3::SDL3)
target_link_libraries(dahlia PRIVATE SDL3_image::SDL3_image)
